# software-rasterizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/00_triangle/: CMakeLists.txt  demo_triangle.cpp
apps/01_indexed_plane/: CMakeLists.txt  demo_indexed_plane.cpp
apps/02_depth_buffer/: CMakeLists.txt  demo_depth_buffer.cpp
apps/03_texture/: CMakeLists.txt  demo_texture.cpp
apps/04_framebuffer/: CMakeLists.txt  demo_framebuffer.cpp
apps/04_viewer/: CMakeLists.txt  demo_viewer.cpp
apps/05_model/: CMakeLists.txt  demo_model.cpp
apps/05_viewer/: CMakeLists.txt  demo_viewer.cpp
apps/06_blinn_phong/: CMakeLists.txt  demo_blinn_phong.cpp
apps/06_model/: CMakeLists.txt  demo_model.cpp
apps/06_model/assets/sad_toaster/: Licence_BY_NC.txt  sad_toaster.mtl
apps/07_blinn_phong/: CMakeLists.txt  demo_blinn_phong.cpp
apps/08_normal_mapping/: CMakeLists.txt  demo_normal_mapping.cpp
apps/08_normal_mapping/assets/cartridge/: cartridge.mtl  license.txt
apps/09_shadow_mapping/: CMakeLists.txt  demo_shadow_mapping.cpp
apps/09_shadow_mapping/assets/low_poly_house/: license.txt  low_poly_house.mtl
apps/10_ambient_occlussion/: CMakeLists.txt  demo_ssao.cpp
apps/10_ambient_occlussion/assets/firered_room/: room.mtl
apps/11_physically_based/: CMakeLists.txt  demo_pbr.cpp  pbr_precompute.cpp
apps/11_physically_based/assets/camera/: camera.mtl  license.txt
apps/11_physically_based/assets/drakefire/: drakefire.mtl  license.txt
apps/11_physically_based/assets/pbr/: 0_precomputed_radiance.hdr  10_precomputed_radiance.hdr  1_precomputed_radiance.hdr  2_precomputed_radiance.hdr  3_precomputed_radiance.hdr  4_precomputed_radiance.hdr  5_precomputed_radiance.hdr  6_precomputed_radiance.hdr  7_precomputed_radiance.hdr  8_precomputed_radiance.hdr  9_precomputed_radiance.hdr  precomputed_brdf.hdr  precomputed_irradiance.hdr
apps/12_cel_shading/: CMakeLists.txt  demo_cel_shading.cpp
apps/12_cel_shading/assets/bird/: bird.mtl  license.txt
apps/utility/: CMakeLists.txt  gl_window.cpp  gl_window.h  model.h  objload.h  timing.h
apps/utility/detail/: mesh.h  shader.h  texture.h
rasterizer/: CMakeLists.txt  buffer.h  framebuffer.cpp  framebuffer.h  program.h  renderer.cpp  renderer.h  sampler.h  texture.cpp  texture.h
rasterizer/detail/: test_member.h  tuple_helper.h  tuple_iter.h
rasterizer/math/: base.h  matrix3.h  matrix4.h  rectangle.h  utility.cpp  utility.h  vector2.h  vector3.h  vector4.h
