add_subdirectory(utility)

add_subdirectory(00_triangle)
add_subdirectory(01_indexed_plane)
add_subdirectory(02_depth_buffer)
add_subdirectory(03_texture)
add_subdirectory(04_framebuffer)
add_subdirectory(05_viewer)
add_subdirectory(06_model)
add_subdirectory(07_blinn_phong)
add_subdirectory(08_normal_mapping)
add_subdirectory(09_shadow_mapping)
add_subdirectory(10_ambient_occlussion)
add_subdirectory(11_physically_based)
add_subdirectory(12_cel_shading)
